Suite documentation
